fixed text overflow problem
text should now clip on overflow and not continue to second line.
Overflow text is represented with …

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -355,6 +355,7 @@ input:focus:-ms-input-placeholder {
     margin: 0;
     width: 100%;
     padding-top: 128px;
+    text-overflow: ellipsis;
 }
 
 .settings {
